@@ -46,7 +46,7 @@ static wchar_t **orig_argv;
 static int  orig_argc;
 
 /* command line options */
-#define BASE_OPTS L"bBc:dEhiJm:OsStuvVW:xX:?"
+#define BASE_OPTS L"bBc:dEhiJm:OqsStuvVW:xX:?"
 
 #define PROGRAM_OPTS BASE_OPTS
 
@@ -71,6 +71,7 @@ static char *usage_2 = "\
 -m mod : run library module as a script (terminates option list)\n\
 -O     : optimize generated bytecode slightly; also PYTHONOPTIMIZE=x\n\
 -OO    : remove doc-strings in addition to the -O optimizations\n\
+-q     : don't print version and copyright messages on interactive startup\n\
 -s     : don't add user site directory to sys.path; also PYTHONNOUSERSITE\n\
 -S     : don't imply 'import site' on initialization\n\
 ";
@@ -318,6 +319,7 @@ Py_Main(int argc, wchar_t **argv)
     int stdin_is_interactive = 0;
     int help = 0;
     int version = 0;
+    int quiet = 0;
     int saw_unbuffered_flag = 0;
     PyCompilerFlags cf;
 
@@ -422,6 +424,10 @@ Py_Main(int argc, wchar_t **argv)
 
         case 'X':
             PySys_AddXOption(_PyOS_optarg);
+            break;
+
+        case 'q':
+            quiet++;
             break;
 
         /* This space reserved for other options */
@@ -588,8 +594,9 @@ Py_Main(int argc, wchar_t **argv)
 #endif
     Py_Initialize();
 
-    if (Py_VerboseFlag ||
-        (command == NULL && filename == NULL && module == NULL && stdin_is_interactive)) {
+    if (!quiet && (Py_VerboseFlag ||
+                        (command == NULL && filename == NULL &&
+                         module == NULL && stdin_is_interactive))) {
         fprintf(stderr, "Python %s on %s\n",
             Py_GetVersion(), Py_GetPlatform());
         if (!Py_NoSiteFlag)
